# pytest_fixtures_import_demo

./: README.md  pyproject.toml
fixtures/: fixtures.py
tests/: conftest.py  test.py
