[tool.poetry]
name = "fixture_import_demo"
version = "0.1.0"
description = ""
authors = ["Xander Pronin <a.pronin@qiwi.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
